--- a/1-items-collaborative-filtering/Colaborative filtering (items) 2.ipynb
+++ b/1-items-collaborative-filtering/Colaborative filtering (items) 2.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f6d8bf91",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "88fe7d7d",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "4        1       980       3  974769817"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ea5702a2",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "586b3e1f",
    "metadata": {},
    "outputs": [
@@ -192,34 +192,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>283077</th>\n",
-       "      <td>2252</td>\n",
-       "      <td>1625</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193896</th>\n",
-       "      <td>1666</td>\n",
-       "      <td>1804</td>\n",
+       "      <th>443483</th>\n",
+       "      <td>3201</td>\n",
+       "      <td>2555</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>293979</th>\n",
-       "      <td>2317</td>\n",
-       "      <td>365</td>\n",
-       "      <td>3</td>\n",
+       "      <th>257813</th>\n",
+       "      <td>2113</td>\n",
+       "      <td>2569</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>472599</th>\n",
-       "      <td>3423</td>\n",
-       "      <td>3312</td>\n",
-       "      <td>3</td>\n",
+       "      <th>15262</th>\n",
+       "      <td>207</td>\n",
+       "      <td>2899</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>190361</th>\n",
-       "      <td>1652</td>\n",
-       "      <td>1747</td>\n",
+       "      <th>276178</th>\n",
+       "      <td>2214</td>\n",
+       "      <td>1531</td>\n",
        "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181196</th>\n",
+       "      <td>1577</td>\n",
+       "      <td>704</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -227,14 +227,14 @@
       ],
       "text/plain": [
        "        user_id  movie_id  rating\n",
-       "283077     2252      1625       3\n",
-       "193896     1666      1804       5\n",
-       "293979     2317       365       3\n",
-       "472599     3423      3312       3\n",
-       "190361     1652      1747       4"
+       "443483     3201      2555       5\n",
+       "257813     2113      2569       5\n",
+       "15262       207      2899       5\n",
+       "276178     2214      1531       4\n",
+       "181196     1577       704       3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2d4828dc",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "081166e6",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0a15b699",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "d281a519",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "3a247cae",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "3c40d5f1",
    "metadata": {},
    "outputs": [],
@@ -429,14 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "4c0f3e5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c09d2527e90d4592b244347f8741057a",
+       "model_id": "aaa35b06f68740d29691056fc7971346",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2052,7 +2052,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_df.to_csv(\"out_fc_items_200.csv\", index=False)"
+    "# out_df.to_csv(\"out_fc_items_200.csv\", index=False)"
    ]
   }
  ],
